--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 16 ms\n"
+      "Wall time: 14.9 ms\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 18 ms\n"
+      "Wall time: 16 ms\n"
      ]
     }
    ],
@@ -154,10 +154,10 @@
     "%%time\n",
     "data_sorted = np.sort(data)\n",
     "idx1 = 0\n",
-    "idx2 = -1\n",
-    "while True:\n",
-    "    num1 = int(data_sorted[idx1])\n",
-    "    num2 = int(data_sorted[idx2])\n",
+    "idx2 = len(data_sorted)-1\n",
+    "while idx1 < idx2:\n",
+    "    num1 = data_sorted[idx1]\n",
+    "    num2 = data_sorted[idx2]\n",
     "    summation = num1 + num2\n",
     "    if summation == 2020:\n",
     "        answer = num1 * num2\n",
@@ -198,7 +198,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.3 s\n"
+      "Wall time: 1.18 s\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.04 s\n"
+      "Wall time: 1.28 s\n"
      ]
     }
    ],
