Updated Day 1 Solutions
- Improved speed of day1 pythonic solution using the next function to find the first match
- Added a fast sort based solution for part 2 of the day1 problem

--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 14.9 ms\n"
+      "Wall time: 13 ms\n"
      ]
     }
    ],
@@ -117,15 +117,14 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 16 ms\n"
+      "Wall time: 12 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "combinations_list = list(itertools.combinations(data, 2))\n",
-    "filtered = [item for item in combinations_list if sum(item) == 2020]\n",
-    "answer = np.prod(filtered[0])\n",
+    "filtered = next(np.prod(item) for item in combinations_list if sum(item) == 2020)\n",
     "print(answer)"
    ]
   },
@@ -146,7 +145,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 998 µs\n"
+      "Wall time: 979 µs\n"
      ]
     }
    ],
@@ -198,7 +197,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.18 s\n"
+      "Wall time: 1.2 s\n"
      ]
     }
    ],
@@ -231,15 +230,64 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.28 s\n"
+      "Wall time: 438 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "combinations_list = list(itertools.combinations(data, 3))\n",
-    "filtered = [item for item in combinations_list if sum(item) == 2020]\n",
-    "answer = np.prod(filtered[0])\n",
+    "answer = next(np.prod(item) for item in combinations_list if sum(item) == 2020)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sort-based solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "286977330\n",
+      "Wall time: 0 ns\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = None\n",
+    "data_sorted = np.sort(data)\n",
+    "idx1 = 0\n",
+    "idx2 = len(data_sorted)-1\n",
+    "while idx1 < idx2:\n",
+    "    num1 = data_sorted[idx1]\n",
+    "    num2 = data_sorted[idx2]\n",
+    "    if num1 + data_sorted[idx1+1] + num2 > 2020:\n",
+    "        idx2 -= 1\n",
+    "    elif num1 + data_sorted[idx2-1] + num2 < 2020:\n",
+    "        idx1 += 1\n",
+    "    else:\n",
+    "        target = 2020 - num2 - num1\n",
+    "        for idx3 in range(idx1+1, idx2):\n",
+    "            num3 = data_sorted[idx3]\n",
+    "            if num3 == target:\n",
+    "                answer = num1 * num2 * num3\n",
+    "                break\n",
+    "            if num3 > target:\n",
+    "                idx1 += 1\n",
+    "                break\n",
+    "    if answer is not None:\n",
+    "        break\n",
+    "\n",
     "print(answer)"
    ]
   },
@@ -271,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +334,7 @@
        "       ['2-7', 'p:', 'ptphppvppppp']], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +355,7 @@
        "460"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +403,7 @@
        "251"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
