Day 1 Solutions Bugfix
- Fixed bug in Day 1 part 1 pythonic solution
- Added code to clear answer at begining of each day 1 solution

--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -83,12 +83,13 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 13 ms\n"
+      "Wall time: 14 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "answer = None\n",
     "for i in range(len(data)):\n",
     "    for j in range(i+1, len(data)):\n",
     "        if data[i] + data[j] == 2020:\n",
@@ -117,14 +118,15 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 12 ms\n"
+      "Wall time: 8.98 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "answer = None\n",
     "combinations_list = list(itertools.combinations(data, 2))\n",
-    "filtered = next(np.prod(item) for item in combinations_list if sum(item) == 2020)\n",
+    "answer = next(np.prod(item) for item in combinations_list if sum(item) == 2020)\n",
     "print(answer)"
    ]
   },
@@ -145,12 +147,13 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 979 µs\n"
+      "Wall time: 1.07 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "answer = None\n",
     "data_sorted = np.sort(data)\n",
     "idx1 = 0\n",
     "idx2 = len(data_sorted)-1\n",
@@ -197,12 +200,13 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.2 s\n"
+      "Wall time: 1.31 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "answer = None\n",
     "for i in range(len(data)):\n",
     "    for j in range(i+1, len(data)):\n",
     "        for k in range(j+1, len(data)):\n",
@@ -230,12 +234,13 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 438 ms\n"
+      "Wall time: 419 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "answer = None\n",
     "combinations_list = list(itertools.combinations(data, 3))\n",
     "answer = next(np.prod(item) for item in combinations_list if sum(item) == 2020)\n",
     "print(answer)"
