--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 14 ms\n"
+      "Wall time: 15 ms\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 8.98 ms\n"
+      "Wall time: 10 ms\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 1.07 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.31 s\n"
+      "Wall time: 1.15 s\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 419 ms\n"
+      "Wall time: 450 ms\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 965 µs\n"
      ]
     }
    ],
@@ -350,34 +350,74 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loop-based solution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "460"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "460\n",
+      "Wall time: 1.96 ms\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "count_valid = 0\n",
     "\n",
-    "for line in data:\n",
-    "    count_min = int(line[0].split('-')[0])\n",
-    "    count_max = int(line[0].split('-')[1])\n",
-    "    character = line[1][:-1]\n",
-    "    password = line[2]\n",
+    "for row in data:\n",
+    "    count_min, count_max = map(int, row[0].split('-'))\n",
+    "    character = row[1][:-1]\n",
+    "    password = row[2]\n",
     "    count = password.count(character)\n",
     "    if(count >= count_min and count <= count_max):\n",
     "        count_valid += 1\n",
     "\n",
-    "count_valid"
+    "print(count_valid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pythonic solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "460\n",
+      "Wall time: 2.03 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = None\n",
+    "def valid_entry(row):\n",
+    "    count_min, count_max = map(int, row[0].split('-'))\n",
+    "    character = row[1][:-1]\n",
+    "    password = row[2]\n",
+    "    count = password.count(character)\n",
+    "    return (count >= count_min and count <= count_max)\n",
+    "    \n",
+    "answer = sum(valid_entry(row) for row in data)\n",
+    "print(answer)"
    ]
   },
   {
@@ -398,33 +438,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loop-based solution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "251"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "251\n",
+      "Wall time: 1.99 ms\n"
+     ]
     }
    ],
    "source": [
+    "%%time\n",
     "count_valid = 0\n",
     "\n",
-    "for line in data:\n",
-    "    position1 = int(line[0].split('-')[0])\n",
-    "    position2 = int(line[0].split('-')[1])\n",
-    "    character = line[1][:-1]\n",
-    "    password = line[2]\n",
-    "    if((password[position1-1] == character) is not (password[position2-1] == character)):\n",
+    "for row in data:\n",
+    "    pos1, pos2 = map(int, row[0].split('-'))\n",
+    "    character = row[1][:-1]\n",
+    "    password = row[2]\n",
+    "    if((password[pos1-1] == character) is not (password[pos2-1] == character)):\n",
     "        count_valid += 1\n",
     "\n",
-    "count_valid"
+    "print(count_valid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pythonic solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "251\n",
+      "Wall time: 2.03 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = None\n",
+    "def valid_entry(row):\n",
+    "    pos1, pos2 = map(int, row[0].split('-'))\n",
+    "    character = row[1][:-1]\n",
+    "    password = row[2]\n",
+    "    return (password[pos1-1] == character) is not (password[pos2-1] == character)\n",
+    "\n",
+    "answer = sum(valid_entry(row) for row in data)\n",
+    "print(answer)"
    ]
   },
   {
