Day 2 and Day 3 Solution Updates
- Reformatted code in a few places
- Added alternative sort-based solution to Day1 Part2
- Cleaned up count comparison line in Day2 solutions
- Added day3 data file
- Added initial day3 solutions

--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 15 ms\n"
+      "Wall time: 14.9 ms\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
     "%%time\n",
     "answer = None\n",
     "for i in range(len(data)):\n",
-    "    for j in range(i+1, len(data)):\n",
+    "    for j in range(i + 1, len(data)):\n",
     "        if data[i] + data[j] == 2020:\n",
     "            answer = data[i] * data[j]\n",
     "            break\n",
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 10 ms\n"
+      "Wall time: 8.98 ms\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 964 µs\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
     "answer = None\n",
     "data_sorted = np.sort(data)\n",
     "idx1 = 0\n",
-    "idx2 = len(data_sorted)-1\n",
+    "idx2 = len(data_sorted) - 1\n",
     "while idx1 < idx2:\n",
     "    num1 = data_sorted[idx1]\n",
     "    num2 = data_sorted[idx2]\n",
@@ -200,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.15 s\n"
+      "Wall time: 1.23 s\n"
      ]
     }
    ],
@@ -208,8 +208,8 @@
     "%%time\n",
     "answer = None\n",
     "for i in range(len(data)):\n",
-    "    for j in range(i+1, len(data)):\n",
-    "        for k in range(j+1, len(data)):\n",
+    "    for j in range(i + 1, len(data)):\n",
+    "        for k in range(j + 1, len(data)):\n",
     "            if data[i] + data[j] + data[k] == 2020:\n",
     "                answer = data[i] * data[j] * data[k]\n",
     "                break\n",
@@ -234,7 +234,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 450 ms\n"
+      "Wall time: 417 ms\n"
      ]
     }
    ],
@@ -263,7 +263,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 965 µs\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
     "answer = None\n",
     "data_sorted = np.sort(data)\n",
     "idx1 = 0\n",
-    "idx2 = len(data_sorted)-1\n",
+    "idx2 = len(data_sorted) - 1\n",
     "while idx1 < idx2:\n",
     "    num1 = data_sorted[idx1]\n",
     "    num2 = data_sorted[idx2]\n",
@@ -292,6 +292,46 @@
     "                break\n",
     "    if answer is not None:\n",
     "        break\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternative slower sort-based solution found on reddit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "286977330\n",
+      "Wall time: 26.9 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = None\n",
+    "for idx3 in range(len(data_sorted) - 2):\n",
+    "    idx1 = idx3 + 1\n",
+    "    idx2 = len(data_sorted) - 1\n",
+    "    while idx1 < idx2:\n",
+    "        summation = data_sorted[idx1] + data_sorted[idx2] + data_sorted[idx3] \n",
+    "        if summation == 2020:\n",
+    "            answer = data_sorted[idx1] * data_sorted[idx2] * data_sorted[idx3] \n",
+    "            break\n",
+    "        if summation > 2020:\n",
+    "            idx2 -= 1\n",
+    "        elif idx1 < 2020:\n",
+    "            idx1 += 1\n",
     "\n",
     "print(answer)"
    ]
@@ -324,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +379,7 @@
        "       ['2-7', 'p:', 'ptphppvppppp']], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +406,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 1.96 ms\n"
+      "Wall time: 3 ms\n"
      ]
     }
    ],
@@ -379,7 +419,7 @@
     "    character = row[1][:-1]\n",
     "    password = row[2]\n",
     "    count = password.count(character)\n",
-    "    if(count >= count_min and count <= count_max):\n",
+    "    if(count_min <= count <= count_max):\n",
     "        count_valid += 1\n",
     "\n",
     "print(count_valid)"
@@ -394,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +442,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 2.03 ms\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -414,7 +454,7 @@
     "    character = row[1][:-1]\n",
     "    password = row[2]\n",
     "    count = password.count(character)\n",
-    "    return (count >= count_min and count <= count_max)\n",
+    "    return (count_min <= count <= count_max)\n",
     "    \n",
     "answer = sum(valid_entry(row) for row in data)\n",
     "print(answer)"
@@ -446,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +494,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 1.99 ms\n"
+      "Wall time: 3.99 ms\n"
      ]
     }
    ],
@@ -481,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 2.03 ms\n"
+      "Wall time: 1.97 ms\n"
      ]
     }
    ],
@@ -503,6 +543,128 @@
     "    return (password[pos1-1] == character) is not (password[pos2-1] == character)\n",
     "\n",
     "answer = sum(valid_entry(row) for row in data)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 3\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "\"From your starting position at the top-left, check the position that is right 3 and down 1. Then, check the position that is right 3 and down 1 from there, and so on until you go past the bottom of the map.\n",
+    "\n",
+    "The locations you'd check in the above example are marked here with O where there was an open square and X where there was a tree:\n",
+    "```\n",
+    "..##.........##.........##.........##.........##.........##.......  --->\n",
+    "#..O#...#..#...#...#..#...#...#..#...#...#..#...#...#..#...#...#..\n",
+    ".#....X..#..#....#..#..#....#..#..#....#..#..#....#..#..#....#..#.\n",
+    "..#.#...#O#..#.#...#.#..#.#...#.#..#.#...#.#..#.#...#.#..#.#...#.#\n",
+    ".#...##..#..X...##..#..#...##..#..#...##..#..#...##..#..#...##..#.\n",
+    "..#.##.......#.X#.......#.##.......#.##.......#.##.......#.##.....  --->\n",
+    ".#.#.#....#.#.#.#.O..#.#.#.#....#.#.#.#....#.#.#.#....#.#.#.#....#\n",
+    ".#........#.#........X.#........#.#........#.#........#.#........#\n",
+    "#.##...#...#.##...#...#.X#...#...#.##...#...#.##...#...#.##...#...\n",
+    "#...##....##...##....##...#X....##...##....##...##....##...##....#\n",
+    ".#..#...#.#.#..#...#.#.#..#...X.#.#..#...#.#.#..#...#.#.#..#...#.#  --->```\n",
+    "In this example, traversing the map using this slope would cause you to encounter 7 trees.\n",
+    "\n",
+    "Starting at the top-left corner of your map and following a slope of right 3 and down 1, how many trees would you encounter?\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "data = np.loadtxt('./data/day3_tree_data.txt', dtype='object', comments=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250\n",
+      "Wall time: 996 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "pos = 0\n",
+    "count_trees = 0\n",
+    "slope = 3\n",
+    "for row in data:\n",
+    "    if row[pos] == '#':\n",
+    "        count_trees += 1\n",
+    "    pos += slope\n",
+    "    if pos >= len(row):\n",
+    "        pos -= len(row)\n",
+    "        \n",
+    "print(count_trees)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2\n",
+    "\n",
+    "\"Determine the number of trees you would encounter if, for each of the following slopes, you start at the top-left corner and traverse the map all the way to the bottom:\n",
+    "\n",
+    "- Right 1, down 1.\n",
+    "- Right 3, down 1. (This is the slope you already checked.)\n",
+    "- Right 5, down 1.\n",
+    "- Right 7, down 1.\n",
+    "- Right 1, down 2.\n",
+    "\n",
+    "In the above example, these slopes would find 2, 7, 3, 4, and 2 tree(s) respectively; multiplied together, these produce the answer 336.\n",
+    "\n",
+    "What do you get if you multiply together the number of trees encountered on each of the listed slopes?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1592662500\n",
+      "Wall time: 1.03 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = 1\n",
+    "slopes = [[1, 1], [3, 1], [5, 1], [7, 1], [1, 2]]\n",
+    "for slope in slopes:\n",
+    "    pos = 0\n",
+    "    count_trees = 0\n",
+    "    data_iter = iter(data)\n",
+    "    for row in data_iter:\n",
+    "        if row[pos] == '#':\n",
+    "            count_trees += 1\n",
+    "        pos += slope[0]\n",
+    "        if pos >= len(row):\n",
+    "            pos -= len(row)\n",
+    "        for _ in range(slope[1]-1):\n",
+    "            next(data_iter, None)\n",
+    "    answer *= count_trees\n",
+    "    \n",
     "print(answer)"
    ]
   },
