Add Alternative Day3 Solutions
- Added alternative day3 Pythonic and functional solutions

--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 8.98 ms\n"
+      "Wall time: 9.97 ms\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sort-based solution by @privotti"
+    "Sort-based solution by @pedrorivotti"
    ]
   },
   {
@@ -147,7 +147,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 964 µs\n"
+      "Wall time: 998 µs\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.23 s\n"
+      "Wall time: 1.2 s\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 417 ms\n"
+      "Wall time: 494 ms\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 26.9 ms\n"
+      "Wall time: 25 ms\n"
      ]
     }
    ],
@@ -406,7 +406,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 3 ms\n"
+      "Wall time: 3.99 ms\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 1.99 ms\n"
+      "Wall time: 2.02 ms\n"
      ]
     }
    ],
@@ -494,7 +494,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 3.99 ms\n"
+      "Wall time: 2.99 ms\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 1.97 ms\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -595,7 +595,7 @@
      "output_type": "stream",
      "text": [
       "250\n",
-      "Wall time: 996 µs\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -618,6 +618,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pythonic solution from @chigozienri"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250\n",
+      "Wall time: 997 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = None\n",
+    "slope = [3, 1]\n",
+    "bool_array = [[char == '#' for char in row] for row in data]\n",
+    "def count_trees(slope, bool_array):\n",
+    "    return sum([row[(i*slope[0]) % len(row)] for i, row in enumerate(bool_array[::slope[1]])])\n",
+    "\n",
+    "answer = count_trees(slope, bool_array)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 2\n",
     "\n",
     "\"Determine the number of trees you would encounter if, for each of the following slopes, you start at the top-left corner and traverse the map all the way to the bottom:\n",
@@ -634,8 +667,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loop-based solution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -643,14 +683,14 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 1.03 ms\n"
+      "Wall time: 4.99 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "answer = 1\n",
-    "slopes = [[1, 1], [3, 1], [5, 1], [7, 1], [1, 2]]\n",
+    "slopes = np.array([[1, 1], [3, 1], [5, 1], [7, 1], [1, 2]])\n",
     "for slope in slopes:\n",
     "    pos = 0\n",
     "    count_trees = 0\n",
@@ -665,6 +705,72 @@
     "            next(data_iter, None)\n",
     "    answer *= count_trees\n",
     "    \n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functional solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1592662500\n",
+      "Wall time: 1.99 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = None\n",
+    "slopes = np.array([[1, 1], [3, 1], [5, 1], [7, 1], [1, 2]])\n",
+    "bool_array = [[char == '#' for char in row] for row in data]\n",
+    "def count_trees(right, down, bool_array):\n",
+    "    return sum([row[(i * right) % len(row)] for i, row in enumerate(bool_array[::down])])\n",
+    "\n",
+    "answer = np.prod(list(map(count_trees, slopes[:, 0], slopes[:, 1], itertools.repeat(bool_array, len(slopes)))))\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pythonic solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1592662500\n",
+      "Wall time: 2.99 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "answer = None\n",
+    "slopes = [[1, 1], [3, 1], [5, 1], [7, 1], [1, 2]]\n",
+    "bool_array = [[char == '#' for char in row] for row in data]\n",
+    "def count_trees(slope, bool_array):\n",
+    "    return sum([row[(i * slope[0]) % len(row)] for i, row in enumerate(bool_array[::slope[1]])])\n",
+    "\n",
+    "answer = np.prod([count_trees(slope, bool_array) for slope in slopes])\n",
     "print(answer)"
    ]
   },
