--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -83,7 +83,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 14.9 ms\n"
+      "Wall time: 1.67 ms\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 9.97 ms\n"
+      "Wall time: 10.4 ms\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 998 µs\n"
+      "Wall time: 961 µs\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.2 s\n"
+      "Wall time: 1.27 s\n"
      ]
     }
    ],
@@ -234,7 +234,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 494 ms\n"
+      "Wall time: 414 ms\n"
      ]
     }
    ],
@@ -276,13 +276,13 @@
     "while idx1 < idx2:\n",
     "    num1 = data_sorted[idx1]\n",
     "    num2 = data_sorted[idx2]\n",
-    "    if num1 + data_sorted[idx1+1] + num2 > 2020:\n",
+    "    if num1 + data_sorted[idx1 + 1] + num2 > 2020:\n",
     "        idx2 -= 1\n",
-    "    elif num1 + data_sorted[idx2-1] + num2 < 2020:\n",
+    "    elif num1 + data_sorted[idx2 - 1] + num2 < 2020:\n",
     "        idx1 += 1\n",
     "    else:\n",
     "        target = 2020 - num2 - num1\n",
-    "        for idx3 in range(idx1+1, idx2):\n",
+    "        for idx3 in range(idx1 + 1, idx2):\n",
     "            num3 = data_sorted[idx3]\n",
     "            if num3 == target:\n",
     "                answer = num1 * num2 * num3\n",
@@ -313,7 +313,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 25 ms\n"
+      "Wall time: 24.9 ms\n"
      ]
     }
    ],
@@ -406,7 +406,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 3.99 ms\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -442,7 +442,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 2.02 ms\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -494,7 +494,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 2.99 ms\n"
+      "Wall time: 3.99 ms\n"
      ]
     }
    ],
@@ -529,7 +529,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 1.99 ms\n"
+      "Wall time: 3 ms\n"
      ]
     }
    ],
@@ -595,7 +595,7 @@
      "output_type": "stream",
      "text": [
       "250\n",
-      "Wall time: 0 ns\n"
+      "Wall time: 1 ms\n"
      ]
     }
    ],
@@ -641,7 +641,7 @@
     "slope = [3, 1]\n",
     "bool_array = [[char == '#' for char in row] for row in data]\n",
     "def count_trees(slope, bool_array):\n",
-    "    return sum([row[(i*slope[0]) % len(row)] for i, row in enumerate(bool_array[::slope[1]])])\n",
+    "    return sum([row[(i * slope[0]) % len(row)] for i, row in enumerate(bool_array[::slope[1]])])\n",
     "\n",
     "answer = count_trees(slope, bool_array)\n",
     "print(answer)"
@@ -683,7 +683,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 4.99 ms\n"
+      "Wall time: 3.01 ms\n"
      ]
     }
    ],
@@ -725,7 +725,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 1.99 ms\n"
+      "Wall time: 2.01 ms\n"
      ]
     }
    ],
@@ -758,7 +758,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 2.99 ms\n"
+      "Wall time: 1.03 ms\n"
      ]
     }
    ],
@@ -771,6 +771,188 @@
     "    return sum([row[(i * slope[0]) % len(row)] for i, row in enumerate(bool_array[::slope[1]])])\n",
     "\n",
     "answer = np.prod([count_trees(slope, bool_array) for slope in slopes])\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 4\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "\"The automatic passport scanners are slow because they're having trouble detecting which passports have all required fields. The expected fields are as follows:\n",
+    "\n",
+    "```\n",
+    "byr (Birth Year)\n",
+    "iyr (Issue Year)\n",
+    "eyr (Expiration Year)\n",
+    "hgt (Height)\n",
+    "hcl (Hair Color)\n",
+    "ecl (Eye Color)\n",
+    "pid (Passport ID)\n",
+    "cid (Country ID)\n",
+    "```\n",
+    "Passport data is validated in batch files (your puzzle input). Each passport is represented as a sequence of key:value pairs separated by spaces or newlines. Passports are separated by blank lines.\n",
+    "\n",
+    "Here is an example batch file containing four passports:\n",
+    "```\n",
+    "ecl:gry pid:860033327 eyr:2020 hcl:#fffffd\n",
+    "byr:1937 iyr:2017 cid:147 hgt:183cm\n",
+    "\n",
+    "iyr:2013 ecl:amb cid:350 eyr:2023 pid:028048884\n",
+    "hcl:#cfa07d byr:1929\n",
+    "\n",
+    "hcl:#ae17e1 iyr:2013\n",
+    "eyr:2024\n",
+    "ecl:brn pid:760753108 byr:1931\n",
+    "hgt:179cm\n",
+    "\n",
+    "hcl:#cfa07d eyr:2025 pid:166559648\n",
+    "iyr:2011 ecl:brn hgt:59in\n",
+    "```\n",
+    "The first passport is valid - all eight fields are present. The second passport is invalid - it is missing hgt (the Height field).\n",
+    "\n",
+    "The third passport is interesting; the only missing field is cid, so it looks like data from North Pole Credentials, not a passport at all! Surely, nobody would mind if you made the system temporarily ignore missing cid fields. Treat this \"passport\" as valid.\n",
+    "\n",
+    "The fourth passport is missing two fields, cid and byr. Missing cid is fine, but missing any other field is not, so this passport is invalid.\n",
+    "\n",
+    "According to the above rules, your improved system would report 2 valid passports.\n",
+    "\n",
+    "Count the number of valid passports - those that have all required fields. Treat cid as optional. In your batch file, how many passports are valid?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open('./data/day4_passport_data.txt', 'r')\n",
+    "\n",
+    "required_keys = ['byr:', 'iyr:', 'eyr:', 'hgt:', 'hcl:', 'ecl:', 'pid:']\n",
+    "passport_data = []\n",
+    "count_pp = 0\n",
+    "data = \"\"\n",
+    "for line in file:\n",
+    "    if line  == \"\\n\":\n",
+    "        passport_data.append(data)\n",
+    "        data = \"\"\n",
+    "        count_pp += 1\n",
+    "    else:\n",
+    "        data += line.replace('\\n', ' ')\n",
+    "\n",
+    "def is_valid(row, required_keys):\n",
+    "    return all([key in row for key in required_keys])\n",
+    "\n",
+    "answer = sum([is_valid(row, required_keys) for row in passport_data])\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "\"You can continue to ignore the cid field, but each other field has strict rules about what values are valid for automatic validation:\n",
+    "\n",
+    "- byr (Birth Year) - four digits; at least 1920 and at most 2002.\n",
+    "- iyr (Issue Year) - four digits; at least 2010 and at most 2020.\n",
+    "- eyr (Expiration Year) - four digits; at least 2020 and at most 2030.\n",
+    "- hgt (Height) - a number followed by either cm or in:\n",
+    "    - If cm, the number must be at least 150 and at most 193.\n",
+    "    - If in, the number must be at least 59 and at most 76.\n",
+    "- hcl (Hair Color) - a # followed by exactly six characters 0-9 or a-f.\n",
+    "- ecl (Eye Color) - exactly one of: amb blu brn gry grn hzl oth.\n",
+    "- pid (Passport ID) - a nine-digit number, including leading zeroes.\n",
+    "- cid (Country ID) - ignored, missing or not.\n",
+    "\n",
+    "Your job is to count the passports where all required fields are both present and valid according to the above rules.\"\n",
+    "\n",
+    "\"Count the number of valid passports - those that have all required fields and valid values. Continue to treat cid as optional. In your batch file, how many passports are valid?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n",
+      "Wall time: 3.99 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "file = open('./data/day4_passport_data.txt', 'r')\n",
+    "required_keys = ['byr:', 'iyr:', 'eyr:', 'hgt:', 'hcl:', 'ecl:', 'pid:']\n",
+    "passport_data = []\n",
+    "count_pp = 0\n",
+    "data = \"\"\n",
+    "for line in file:\n",
+    "    if line  == \"\\n\":\n",
+    "        passport_data.append(data)\n",
+    "        data = \"\"\n",
+    "        count_pp += 1\n",
+    "    else:\n",
+    "        data += line.replace('\\n', ' ')\n",
+    "\n",
+    "def is_valid(row, required_keys):\n",
+    "    if all([key in row for key in required_keys]):\n",
+    "        entries = row.split()\n",
+    "        for entry in entries:\n",
+    "            key, value = entry.strip().split(':')\n",
+    "            if key == 'byr':\n",
+    "                if len(value) != 4 or not (1920 <= int(value) <= 2002):\n",
+    "                    return False\n",
+    "            if key == 'iyr':\n",
+    "                if len(value) != 4 or not (2010 <= int(value) <= 2020):\n",
+    "                    return False\n",
+    "            if key == 'eyr':\n",
+    "                if len(value) != 4 or not (2020 <= int(value) <= 2030):\n",
+    "                    return False\n",
+    "            if key == 'hgt':\n",
+    "                if 'cm' in value:\n",
+    "                    if not (150 <= int(value[:-2]) <= 193):\n",
+    "                        return False\n",
+    "                elif 'in' in value:\n",
+    "                    if not (59 <= int(value[:-2]) <= 76):\n",
+    "                        return False\n",
+    "                else:\n",
+    "                    return False\n",
+    "            if key == 'hcl':\n",
+    "                if value[0] != '#':\n",
+    "                    return False\n",
+    "                for c in value[1:]:\n",
+    "                    if c.isalpha() and not (97 <= ord(c) <= 102):\n",
+    "                        return False\n",
+    "                    if c.isdigit() and not (0 <= int(c) <= 9):\n",
+    "                        return False\n",
+    "            if key == 'ecl':\n",
+    "                if len(value) != 3 or value not in 'amb, blu, brn, gry, grn, hzl, oth':\n",
+    "                    return False\n",
+    "            if key == 'pid':\n",
+    "                if len(value) != 9 or not value.isdigit():\n",
+    "                    return False\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "answer = sum([is_valid(row, required_keys) for row in passport_data])\n",
     "print(answer)"
    ]
   },
