Update Day 4 Solutions
- Cleaned up day4 solutions to make the code more concise and readable

--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -6,8 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import itertools\n",
     "import numpy as np\n",
-    "import itertools"
+    "import string"
    ]
   },
   {
@@ -83,7 +84,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 1.67 ms\n"
+      "Wall time: 12 ms\n"
      ]
     }
    ],
@@ -118,7 +119,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 10.4 ms\n"
+      "Wall time: 8.98 ms\n"
      ]
     }
    ],
@@ -147,7 +148,7 @@
      "output_type": "stream",
      "text": [
       "1020036\n",
-      "Wall time: 961 µs\n"
+      "Wall time: 997 µs\n"
      ]
     }
    ],
@@ -200,7 +201,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 1.27 s\n"
+      "Wall time: 1.2 s\n"
      ]
     }
    ],
@@ -234,7 +235,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 414 ms\n"
+      "Wall time: 426 ms\n"
      ]
     }
    ],
@@ -313,7 +314,7 @@
      "output_type": "stream",
      "text": [
       "286977330\n",
-      "Wall time: 24.9 ms\n"
+      "Wall time: 22 ms\n"
      ]
     }
    ],
@@ -442,7 +443,7 @@
      "output_type": "stream",
      "text": [
       "460\n",
-      "Wall time: 1.99 ms\n"
+      "Wall time: 2.01 ms\n"
      ]
     }
    ],
@@ -494,7 +495,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 3.99 ms\n"
+      "Wall time: 1.98 ms\n"
      ]
     }
    ],
@@ -529,7 +530,7 @@
      "output_type": "stream",
      "text": [
       "251\n",
-      "Wall time: 3 ms\n"
+      "Wall time: 1.03 ms\n"
      ]
     }
    ],
@@ -595,7 +596,7 @@
      "output_type": "stream",
      "text": [
       "250\n",
-      "Wall time: 1 ms\n"
+      "Wall time: 0 ns\n"
      ]
     }
    ],
@@ -631,7 +632,7 @@
      "output_type": "stream",
      "text": [
       "250\n",
-      "Wall time: 997 µs\n"
+      "Wall time: 1.03 ms\n"
      ]
     }
    ],
@@ -683,7 +684,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 3.01 ms\n"
+      "Wall time: 2.99 ms\n"
      ]
     }
    ],
@@ -725,7 +726,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 2.01 ms\n"
+      "Wall time: 977 µs\n"
      ]
     }
    ],
@@ -758,7 +759,7 @@
      "output_type": "stream",
      "text": [
       "1592662500\n",
-      "Wall time: 1.03 ms\n"
+      "Wall time: 1.99 ms\n"
      ]
     }
    ],
@@ -841,18 +842,16 @@
     "\n",
     "required_keys = ['byr:', 'iyr:', 'eyr:', 'hgt:', 'hcl:', 'ecl:', 'pid:']\n",
     "passport_data = []\n",
-    "count_pp = 0\n",
     "data = \"\"\n",
     "for line in file:\n",
     "    if line  == \"\\n\":\n",
     "        passport_data.append(data)\n",
     "        data = \"\"\n",
-    "        count_pp += 1\n",
     "    else:\n",
     "        data += line.replace('\\n', ' ')\n",
     "\n",
     "def is_valid(row, required_keys):\n",
-    "    return all([key in row for key in required_keys])\n",
+    "    return all(key in row for key in required_keys)\n",
     "\n",
     "answer = sum([is_valid(row, required_keys) for row in passport_data])\n",
     "print(answer)"
@@ -892,7 +891,7 @@
      "output_type": "stream",
      "text": [
       "150\n",
-      "Wall time: 3.99 ms\n"
+      "Wall time: 5.95 ms\n"
      ]
     }
    ],
@@ -901,58 +900,50 @@
     "file = open('./data/day4_passport_data.txt', 'r')\n",
     "required_keys = ['byr:', 'iyr:', 'eyr:', 'hgt:', 'hcl:', 'ecl:', 'pid:']\n",
     "passport_data = []\n",
-    "count_pp = 0\n",
     "data = \"\"\n",
     "for line in file:\n",
     "    if line  == \"\\n\":\n",
     "        passport_data.append(data)\n",
     "        data = \"\"\n",
-    "        count_pp += 1\n",
     "    else:\n",
     "        data += line.replace('\\n', ' ')\n",
     "\n",
-    "def is_valid(row, required_keys):\n",
-    "    if all([key in row for key in required_keys]):\n",
-    "        entries = row.split()\n",
-    "        for entry in entries:\n",
-    "            key, value = entry.strip().split(':')\n",
-    "            if key == 'byr':\n",
-    "                if len(value) != 4 or not (1920 <= int(value) <= 2002):\n",
-    "                    return False\n",
-    "            if key == 'iyr':\n",
-    "                if len(value) != 4 or not (2010 <= int(value) <= 2020):\n",
-    "                    return False\n",
-    "            if key == 'eyr':\n",
-    "                if len(value) != 4 or not (2020 <= int(value) <= 2030):\n",
-    "                    return False\n",
-    "            if key == 'hgt':\n",
-    "                if 'cm' in value:\n",
-    "                    if not (150 <= int(value[:-2]) <= 193):\n",
-    "                        return False\n",
-    "                elif 'in' in value:\n",
-    "                    if not (59 <= int(value[:-2]) <= 76):\n",
-    "                        return False\n",
-    "                else:\n",
-    "                    return False\n",
-    "            if key == 'hcl':\n",
-    "                if value[0] != '#':\n",
-    "                    return False\n",
-    "                for c in value[1:]:\n",
-    "                    if c.isalpha() and not (97 <= ord(c) <= 102):\n",
-    "                        return False\n",
-    "                    if c.isdigit() and not (0 <= int(c) <= 9):\n",
-    "                        return False\n",
-    "            if key == 'ecl':\n",
-    "                if len(value) != 3 or value not in 'amb, blu, brn, gry, grn, hzl, oth':\n",
-    "                    return False\n",
-    "            if key == 'pid':\n",
-    "                if len(value) != 9 or not value.isdigit():\n",
-    "                    return False\n",
+    "def is_entry_valid(entry):\n",
+    "    hex_digits = set(string.hexdigits)\n",
+    "    key, value = entry.strip().split(':')\n",
+    "    if key == 'byr':\n",
+    "        return value.isdigit() and (1920 <= int(value) <= 2002)\n",
+    "    elif key == 'iyr':\n",
+    "        return value.isdigit() and (2010 <= int(value) <= 2020)\n",
+    "    elif key == 'eyr':\n",
+    "        return value.isdigit() and (2020 <= int(value) <= 2030)\n",
+    "    elif key == 'hgt':\n",
+    "        if value[-2:] == 'cm':\n",
+    "            return value[:-2].isdigit() and (150 <= int(value[:-2]) <= 193)\n",
+    "        elif value[-2:] == 'in':\n",
+    "            return value[:-2].isdigit() and (59 <= int(value[:-2]) <= 76)\n",
+    "        else:\n",
+    "            return False\n",
+    "    elif key == 'hcl':\n",
+    "        if value[0] == '#':\n",
+    "            return all(char in hex_digits for char in value[1:])\n",
+    "        else:\n",
+    "            return False\n",
+    "    elif key == 'ecl':\n",
+    "        return len(value) == 3 and value in ['amb', 'blu', 'brn', 'gry', 'grn', 'hzl', 'oth']\n",
+    "    elif key == 'pid':\n",
+    "        return len(value) == 9 and value.isdigit()\n",
+    "    else:\n",
     "        return True\n",
+    "        \n",
+    "def is_passport_valid(row, required_keys):\n",
+    "    if all(key in row for key in required_keys):\n",
+    "        entries = row.split()\n",
+    "        return all(is_entry_valid(entry) for entry in entries)\n",
     "    else:\n",
     "        return False\n",
     "\n",
-    "answer = sum([is_valid(row, required_keys) for row in passport_data])\n",
+    "answer = sum([is_passport_valid(row, required_keys) for row in passport_data])\n",
     "print(answer)"
    ]
   },
