--- a/AoC2020 Solutions.ipynb
+++ b/AoC2020 Solutions.ipynb
@@ -948,6 +948,129 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Day 5\n",
+    "\n",
+    "### Part 1\n",
+    "\n",
+    "\"Instead of zones or groups, this airline uses binary space partitioning to seat people. A seat might be specified like FBFBBFFRLR, where F means \"front\", B means \"back\", L means \"left\", and R means \"right\".\n",
+    "\n",
+    "The first 7 characters will either be F or B; these specify exactly one of the 128 rows on the plane (numbered 0 through 127). Each letter tells you which half of a region the given seat is in. Start with the whole list of rows; the first letter indicates whether the seat is in the front (0 through 63) or the back (64 through 127). The next letter indicates which half of that region the seat is in, and so on until you're left with exactly one row.\n",
+    "\n",
+    "For example, consider just the first seven characters of FBFBBFFRLR:\n",
+    "\n",
+    "- Start by considering the whole range, rows 0 through 127.\n",
+    "- F means to take the lower half, keeping rows 0 through 63.\n",
+    "- B means to take the upper half, keeping rows 32 through 63.\n",
+    "- F means to take the lower half, keeping rows 32 through 47.\n",
+    "- B means to take the upper half, keeping rows 40 through 47.\n",
+    "- B keeps rows 44 through 47.\n",
+    "- F keeps rows 44 through 45.\n",
+    "- The final F keeps the lower of the two, row 44.\n",
+    "\n",
+    "The last three characters will be either L or R; these specify exactly one of the 8 columns of seats on the plane (numbered 0 through 7). The same process as above proceeds again, this time with only three steps. L means to keep the lower half, while R means to keep the upper half.\n",
+    "\n",
+    "For example, consider just the last 3 characters of FBFBBFFRLR:\n",
+    "\n",
+    "- Start by considering the whole range, columns 0 through 7.\n",
+    "- R means to take the upper half, keeping columns 4 through 7.\n",
+    "- L means to take the lower half, keeping columns 4 through 5.\n",
+    "- The final R keeps the upper of the two, column 5.\n",
+    "\n",
+    "So, decoding FBFBBFFRLR reveals that it is the seat at row 44, column 5.\n",
+    "\n",
+    "Every seat also has a unique seat ID: multiply the row by 8, then add the column. In this example, the seat has ID 44 * 8 + 5 = 357.\n",
+    "\n",
+    "Here are some other boarding passes:\n",
+    "\n",
+    "- BFFFBBFRRR: row 70, column 7, seat ID 567.\n",
+    "- FFFBBBFRRR: row 14, column 7, seat ID 119.\n",
+    "- BBFFBBFRLL: row 102, column 4, seat ID 820.\n",
+    "\n",
+    "As a sanity check, look through your list of boarding passes. What is the highest seat ID on a boarding pass?\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = np.loadtxt('./data/day5_boarding_pass_data.txt', dtype='object', comments=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "842\n",
+      "Wall time: 2.99 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "def get_seat_id(code):\n",
+    "    lower_row = 0\n",
+    "    upper_row = 127\n",
+    "    lower_col = 0\n",
+    "    upper_col = 7\n",
+    "    for char in code:\n",
+    "        if char == 'F':\n",
+    "            upper_row -= (upper_row + 1 - lower_row) / 2\n",
+    "        elif char == 'B':\n",
+    "            lower_row += (upper_row + 1 - lower_row) / 2\n",
+    "        elif char == 'L':\n",
+    "            upper_col -= (upper_col + 1 - lower_col) / 2\n",
+    "        elif char == 'R':\n",
+    "            lower_col += (upper_col + 1 - lower_col) / 2\n",
+    "    \n",
+    "    return int(8 * lower_row + lower_col)\n",
+    "    \n",
+    "answer = max(get_seat_id(row) for row in data)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 2\n",
+    "\n",
+    "\"However, there's a catch: some of the seats at the very front and back of the plane don't exist on this aircraft, so they'll be missing from your list as well.\n",
+    "\n",
+    "Your seat wasn't at the very front or back, though; the seats with IDs +1 and -1 from yours will be in your list.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "617\n",
+      "Wall time: 2.99 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "ids_sorted = np.sort([get_seat_id(row) for row in data])\n",
+    "answer = next(id for i, id in enumerate(ids_sorted) if ids_sorted[i + 1] - id > 1) + 1\n",
+    "print(answer)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
